# serum-grid-bot

./: .gitignore  Cargo.toml  SOL  markets.json  owner.json
src/: main.rs
src/mongodb/: client.rs  mod.rs  models.rs
src/serum/: state.rs
src/workers/: base.rs  cleanup.rs  error.rs  message.rs  mod.rs  sync.rs  trade.rs
